--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -637,3 +637,95 @@ public class Main implements Runnable {
 
 ### 线程池工作原理
 
+Java线程池主要用于管理线程组及其运行状态,以便Java虚拟机更好的利用cpu资源,
+
+工作原理为: JVM先根据用户参数创建一定数量的可运行的线程任务, 将其放入队列中, 在线程创建后启动这些任务，如果线程数量超过了最大线程数量（用户设置的线程池大小），则超出数量的线程排队等候，在有任务执行完毕后，线程池调度器会发现有可用的线程，进而再次从队列中取出任务并执行。
+
+线程池的主要作用是线程复用、线程资源管理、控制操作系统的最大并发数，以保证系统高效（通过线程资源复用实现）且安全（通过控制最大线程并发数实现）地运行。
+
+#### 线程池的核心组件和核心类
+
+- **线程池管理器**: 用于创建并管理线程池
+- **工作线程**: 线程池中执行具体任务的线程
+- **任务接口**: 用于定义工作线程的调度和执行策略, 只有线程实现了该接口, 线程中的任务才能够被线程池调度
+- **任务队列**: 存放待处理的任务, 新的任务将会不断加入到队列中, 执行完的任务, 将会从队列中移除
+
+#### 线程池的工作流程
+
+线程池在刚创建的时候, 只向系统申请一个用于执行线程队列, 和管理线程池的线程资源, 在调用execute()添加任务时,线程池的工作流程如下
+
+- 当正在运行的线程数量少于规定的核心线程数量, 线程池立即创建线程, 并执行任务
+- 当正在运行的线程数量大于或者等于核心线程数量, 该任务被加入到阻塞队列中
+- 当阻塞队列已满, 正在运行的线程数量小于最大线程数量, 线程池创建非核心线程, 并执行任务
+- 当阻塞队列已满, 正在运行的线程数量大于等于最大线程数量, 线程池拒绝执行该任务, 抛出RejectExecutionException异常
+- 在线程执行完毕, 该任务从阻塞队列中移除, 读取队列下一个任务执行
+- 线程处于空闲状态超过设置的时间, 并且为非核心线程, 线程池会停止非核心线程.  线程池所有任务执行完毕后, 线程池大小会收缩到设置的核心线程数量的大小
+
+![线程池工作流程](../图片/面试/线程池工作流程.png)
+
+### 常用线程池
+
+- **newCachedThreadPool**  可缓存的线程池
+
+  在创建新线程时, 如果有可用的线程, 则重用他们(任务完成但未关闭的线程)
+
+  该线程池可无限扩大, 适用于处理时间比较小的任务
+
+  ```java
+  ExecutorService pool = Executors.newCachedThreadPool();
+  ```
+
+- **newFixedThreadPool**  固定大小线程池
+
+  ```java
+  ExecutorService pool = Executors.newFixedThreadPool(10);
+  ```
+
+- **newScheduledThreadPool**  可做任务调度的线程池
+
+  创建了一个可定时调度的线程池, 可设置在给定的延迟时间后执行或者定期执行某个线程任务
+
+  ```java
+  ScheduledExecutorService pool = Executors.newScheduledThreadPool(3);
+  pool.schedule(new Runnable() {
+      @Override
+      public void run() {
+          System.out.println("延迟3秒, 执行一次");
+      }
+  }, 3, TimeUnit.SECONDS);
+  
+  pool.scheduleAtFixedRate(new Runnable() {
+      @Override
+      public void run() {
+          System.out.println("延迟1秒, 每三秒执行一次");
+      }
+  }, 1, 3, TimeUnit.SECONDS);
+  ```
+
+- **newSingleThreadExecutor**   单个线程的线程池
+
+  保证永远有且只有一个可用的线程, 在该线程异常或停止时, 会创建一个新的线程执行任务
+
+  ```java
+  ExecutorService pool = Executors.newSingleThreadExecutor();
+  ```
+
+- **newWorkStealingPool**  足够大小的线程池 jdk8新增
+
+  newWorkStealingPool创建持有足够线程的线程池来达到快速运算的目的，在内部通过使用多个队列来减少各个线程调度产生的竞争。这里所说的有足够的线程指JDK根据当前线程的运行需求向操作系统申请足够的线程，以保障线程的快速执行，并很大程度地使用系统资源，提高并发计算的效率，省去用户根据CPU资源估算并行度的过程
+
+  ```java
+  ExecutorService pool = Executors.newWorkStealingPool();
+  ```
+
+### 线程生命周期
+
+#### 线程生命周期流程
+
+- 调用new方法新建一个线程, 线程进入新建状态
+- 调用start方法启动一个线程, 线程进入就绪状态
+- 处于就绪状态的线程等待线程获取cpu资源, 获取资源后, 进入运行状态
+- 正在运行状态的线程, 调用了yield方法, 或者失去cpu资源, 会再次进入就绪状态
+- 正在运行状态的线程, 调用了sleep方法, I/O阻塞, 等待同步锁, 等待通知, 调用suspend方法等操作后, 会挂起并进入阻塞状态, 进入blocked池.
+- 阻塞状态的线程, 由于sleep时间已到,I/O方法返回结果, 获得同步锁, 收到通知, 调用resume方法等情况, 会再次进入到就绪状态, 等待cpu时间片的轮询, 获取cpu资源后, 再次进入到运行状态.
+
