--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -1703,3 +1703,110 @@ class Solution {
 }
 ```
 
+## 27.[二叉树的最小深度](https://leetcode-cn.com/problems/minimum-depth-of-binary-tree/)
+
+**描述**
+
+给定一个二叉树，找出其最小深度。
+
+最小深度是从根节点到最近叶子节点的最短路径上的节点数量。
+
+**说明:** 叶子节点是指没有子节点的节点。
+
+**示例**
+
+给定二叉树 `[3,9,20,null,null,15,7]`,
+
+```
+    3
+   / \
+  9  20
+    /  \
+   15   7
+```
+
+返回它的最小深度  2.
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+  public int minDepth(TreeNode root) {
+    if(root == null) return 0;
+    if(root.left == null && root.right == null) return 1;
+    int depthCount = Integer.MAX_VALUE;
+    if(root.left != null){
+        depthCount = Math.min(minDepth(root.left), depthCount);
+    }
+    if(root.right != null){
+        depthCount = Math.min(minDepth(root.right), depthCount);
+    }
+    return depthCount + 1;
+  }
+}
+```
+
+## 28.[路径总和](https://leetcode-cn.com/problems/path-sum/)
+
+**描述**
+
+给定一个二叉树和一个目标和，判断该树中是否存在根节点到叶子节点的路径，这条路径上所有节点值相加等于目标和。
+
+**说明:** 叶子节点是指没有子节点的节点。
+
+**示例**
+
+给定如下二叉树，以及目标和 `sum = 22`，
+
+```
+			 5
+             / \
+            4   8
+           /   / \
+          11  13  4
+         /  \      \
+        7    2      1
+```
+
+返回 `true`, 因为存在目标和为 22 的根节点到叶子节点的路径 `5->4->11->2`。
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    // 递归, 每次减掉当前节点得值, 当当前节点是叶子节点是, 判断sum是否等于0 
+    public boolean hasPathSum(TreeNode root, int sum) {
+        if(root == null){
+            return false;
+        }
+        sum -= root.val;
+        if(root.left == null && root.right == null){
+            return sum == 0;
+        }
+        return hasPathSum(root.left, sum) || hasPathSum(root.right, sum);
+    }
+}
+```
+
