--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -1810,3 +1810,50 @@ class Solution {
 }
 ```
 
+## 29.[杨辉三角](https://leetcode-cn.com/problems/pascals-triangle/)
+
+**描述**
+
+给定一个非负整数 *numRows，*生成杨辉三角的前 *numRows* 行。
+
+**示例**
+
+```
+输入: 5
+输出:
+[
+     [1],
+    [1,1],
+   [1,2,1],
+  [1,3,3,1],
+ [1,4,6,4,1]
+]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<List<Integer>> generate(int numRows) {
+        List<List<Integer>> result = new ArrayList<>();
+        for(int i=0; i<numRows; i++){
+            List<Integer> list = new ArrayList<>();
+            for(int j=0; j<=i; j++){
+                // 当前数字是两边的数时, 直接赋值1
+                if(j == 0 || j == i){
+                    list.add(1);
+                // 是中间的数时, 去上一行的两个数相加
+                }else{
+                    list.add(result.get(i-1).get(j-1) + result.get(i-1).get(j));
+                }
+            }
+            result.add(list);
+        }
+        return result;
+    }
+}
+```
+
+## 
