--- a/计算机词汇.md
+++ b/计算机词汇.md
@@ -1,3 +1,14 @@
+# B
+
+binary
+
+```
+binary adj. 二进制的(用0和1记数); 仅基于两个数字的; 二元的; 由两部分组成的; n. 一双;
+binary fission 二分裂法；二分裂（体）;
+binary digit 二进制位；（数）二进制数字；二进制数位;
+binary search 对分查找；二进位检索；折半查找法；二分搜寻;
+```
+
 # S
 
 scratch
