--- a/面试/算法练习-简单(1-30).md
+++ b/面试/算法练习-简单(1-30).md
@@ -2,9 +2,9 @@
 
 [力扣（LeetCode）](https://leetcode-cn.com/)
 
-# 简单(1-50)
+# 简单(1-30)
 
-## 1.[两数之和](https://leetcode-cn.com/problems/two-sum) +3
+## 1.[两数之和](https://leetcode-cn.com/problems/two-sum) 
 
 **描述**
 
@@ -49,7 +49,7 @@ class Solution {
 }
 ```
 
-## 2.[整数反转](https://leetcode-cn.com/problems/reverse-integer/)  +3
+## 2.[整数反转](https://leetcode-cn.com/problems/reverse-integer/) 
 
 **描述**
 
@@ -133,7 +133,7 @@ class Solution {
 }
 ```
 
-## 3.[回文数](https://leetcode-cn.com/problems/palindrome-number/) +3
+## 3.[回文数](https://leetcode-cn.com/problems/palindrome-number/) 
 
 **描述**
 
@@ -193,7 +193,7 @@ class Solution {
 }
 ```
 
-## 4.[罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/) +2
+## 4.[罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/) 
 
 **描述**
 
@@ -304,7 +304,7 @@ class Solution {
 }
 ```
 
-## 5.[最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/) +2
+## 5.[最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/) 
 
 **描述**
 
@@ -372,7 +372,7 @@ class Solution {
 }
 ```
 
-## 6.[有效的括号](https://leetcode-cn.com/problems/valid-parentheses/) +1
+## 6.[有效的括号](https://leetcode-cn.com/problems/valid-parentheses/) 
 
 **描述**
 
@@ -487,7 +487,7 @@ class Solution {
 }
 ```
 
-## 7.[合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists)  +1
+## 7.[合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists) 
 
 **描述**
 
@@ -536,7 +536,7 @@ class Solution {
 }
 ```
 
-## 8.[删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/) +1
+## 8.[删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/) 
 
 **描述**
 
@@ -1856,4 +1856,58 @@ class Solution {
 }
 ```
 
-## 
+## 30.[杨辉三角 II](https://leetcode-cn.com/problems/pascals-triangle-ii/)
+
+**描述**
+
+给定一个非负索引 *k*，其中 *k* ≤ 33，返回杨辉三角的第 *k* 行。
+
+**示例**
+
+```
+输入: 3
+输出: [1,3,3,1]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<Integer> getRow(int rowIndex) {
+        List<Integer> pre = new ArrayList<>();
+        for(int i = 0; i <= rowIndex; i++){
+            List<Integer> list = new ArrayList<>();
+            for(int j = 0; j <= i; j++){
+                if(j == 0 || j == i){
+                    list.add(1);
+                }else{
+                    list.add(pre.get(j-1) + pre.get(j));
+                }
+            }
+            pre = list;
+        }
+        return pre;
+    }
+}
+
+class Solution {
+    public List<Integer> getRow(int rowIndex) {
+        List<Integer> list = new ArrayList<>();
+        for(int i = 0; i <= rowIndex; i++){
+            for(int j = 0; j <= i; j++){
+                if(j == 0){
+                    list.add(1);
+                }else if(j == i){
+                    continue;
+                }else{
+                    list.set(i-j, list.get(i-j-1) + list.get(i-j));
+                }
+            }
+        }
+        return list;
+    }
+}
+```
+
