--- a/面试/算法练习-简单(31-60) .md
+++ b/面试/算法练习-简单(31-60) .md
@@ -169,4 +169,391 @@ class Solution {
 }
 ```
 
-## 
+## 4.[只出现一次的数字](https://leetcode-cn.com/problems/single-number/)
+
+**描述**
+
+给定一个非空整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
+
+**说明：**
+
+你的算法应该具有线性时间复杂度。 你可以不使用额外空间来实现吗？
+
+**示例**
+
+示例一
+
+```
+输入: [2,2,1]
+输出: 1
+```
+
+示例二
+
+```
+输入: [4,1,2,1,2]
+输出: 4
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 使用位运算, 异或, 异或满足交换律
+    // 0 ^ 1 = 1
+    // 0 ^ 0 = 0
+    // 1 ^ 1 = 0
+    // 所以[2,1,3,2,1]  0 ^ 2 ^ 1 ^ 3 ^ 2 ^ 1 = 0 ^ (1 ^ 1) ^ (2 ^ 2) ^ 3 = 0 ^ 0 ^ 0 ^ 3 = 3  
+    public int singleNumber(int[] nums) {
+        int tmp = 0;
+        for(int i : nums){
+            tmp ^= i;
+        }
+        return tmp;
+    }
+}
+```
+
+## 5.[环形链表](https://leetcode-cn.com/problems/linked-list-cycle/)
+
+**描述**
+
+给定一个链表，判断链表中是否有环。
+
+为了表示给定链表中的环，我们使用整数 pos 来表示链表尾连接到链表中的位置（索引从 0 开始）。 如果 pos 是 -1，则在该链表中没有环。
+
+**示例**
+
+示例一
+
+```
+输入：head = [3,2,0,-4], pos = 1
+输出：true
+解释：链表中有一个环，其尾部连接到第二个节点。
+```
+
+示例二
+
+```
+输入：head = [1,2], pos = 0
+输出：true
+解释：链表中有一个环，其尾部连接到第一个节点。
+```
+
+示例三
+
+```
+输入：head = [1], pos = -1
+输出：false
+解释：链表中没有环。
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for singly-linked list.
+ * class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    // 快慢指针, 快指针每次走两个节点, 慢指针每次走一个节点, 如果是环形链表, 快指针和慢指针一定会遇到
+    // 如果不是环形链表, 快指针会先走到链表末尾, 判断快指针是否遍历到null, 为null就返回false
+    public boolean hasCycle(ListNode head) {
+        if(head == null || head.next == null){
+            return false;
+        }
+        ListNode fast = head.next;
+        ListNode slow = head;
+        while(fast != slow){
+            if(fast == null || fast.next == null){
+                return false;
+            }
+            fast = fast.next.next;
+            slow = slow.next;
+        }
+        return true;
+        
+    }
+}
+```
+
+## 6.[最小栈](https://leetcode-cn.com/problems/min-stack/)
+
+**描述**
+
+设计一个支持 push ，pop ，top 操作，并能在常数时间内检索到最小元素的栈。
+
+push(x) —— 将元素 x 推入栈中。
+pop() —— 删除栈顶的元素。
+top() —— 获取栈顶元素。
+getMin() —— 检索栈中的最小元素。
+
+**示例**
+
+示例一
+
+```
+输入：
+["MinStack","push","push","push","getMin","pop","top","getMin"]
+[[],[-2],[0],[-3],[],[],[],[]]
+
+输出：
+[null,null,null,null,-3,null,0,-2]
+
+解释：
+MinStack minStack = new MinStack();
+minStack.push(-2);
+minStack.push(0);
+minStack.push(-3);
+minStack.getMin();   --> 返回 -3.
+minStack.pop();
+minStack.top();      --> 返回 0.
+minStack.getMin();   --> 返回 -2.
+
+来源：力扣（LeetCode）
+链接：https://leetcode-cn.com/problems/min-stack
+著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。输入：head = [3,2,0,-4], pos = 1
+输出：true
+解释：链表中有一个环，其尾部连接到第二个节点。
+```
+
+**提示：**
+
+- `pop`、`top` 和 `getMin` 操作总是在 **非空栈** 上调用。
+
+**题解**
+
+**Java**
+
+```java
+class MinStack {
+
+    private int top = -1;
+    // 存每个值
+    private List<Integer> list;
+    // 存每次添加值时, 当前list的最小值
+    private List<Integer> minList;
+
+    /** initialize your data structure here. */
+    public MinStack() {
+        list = new ArrayList<>();
+        minList = new ArrayList<>();
+    }
+    
+    public void push(int x) {
+        if(minList.size() == 0 || minList.get(top) > x){
+            minList.add(x);
+        }else{
+            minList.add(minList.get(top));
+        }
+        top++;
+        list.add(x);
+    }
+    
+    public void pop() {
+        if(top >= 0){
+            minList.remove(top);
+            list.remove(top);
+            top--;
+        }
+        
+    }
+    
+    public int top() {
+        return list.get(top);
+    }
+    
+    public int getMin() {
+        return minList.get(top);
+    }
+}
+
+/**
+ * Your MinStack object will be instantiated and called as such:
+ * MinStack obj = new MinStack();
+ * obj.push(x);
+ * obj.pop();
+ * int param_3 = obj.top();
+ * int param_4 = obj.getMin();
+ */
+```
+
+## 7.[相交链表](https://leetcode-cn.com/problems/intersection-of-two-linked-lists/)
+
+**描述**
+
+编写一个程序，找到两个单链表相交的起始节点。
+
+**示例**
+
+示例一
+
+```
+输入：intersectVal = 8, listA = [4,1,8,4,5], listB = [5,0,1,8,4,5], skipA = 2, skipB = 3
+输出：Reference of the node with value = 8
+输入解释：相交节点的值为 8 （注意，如果两个链表相交则不能为 0）。从各自的表头开始算起，链表 A 为 [4,1,8,4,5]，链表 B 为 [5,0,1,8,4,5]。在 A 中，相交节点前有 2 个节点；在 B 中，相交节点前有 3 个节点。
+```
+
+**注意：**
+
+如果两个链表没有交点，返回 null.
+在返回结果后，两个链表仍须保持原有的结构。
+可假定整个链表结构中没有循环。
+程序尽量满足 O(n) 时间复杂度，且仅用 O(1) 内存。
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    // 先遍历A和B, 如果A和B的长度相同, 并且在某个节点hA == hB 说明该节点是相交的节点, 如果没有相等的说明,遍历到最后, hA和hB会同时为null, 不相交
+    // 如果A和B的长度不相同, 当A遍历结束hA指向B的头节点, 接着遍历, A+B的长度会等于B+A的长度
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+       if(headA == null || headB == null) return null;
+       ListNode hA = headA;
+       ListNode hB = headB;
+       while(hA != hB){
+           hA = hA == null ? headB : hA.next;
+           hB = hB == null ? headA : hB.next;
+       }
+       return hA;
+    }
+}
+```
+
+## 8.[两数之和 II - 输入有序数组](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)
+
+**描述**
+
+给定一个已按照升序排列 的有序数组，找到两个数使得它们相加之和等于目标数。
+
+函数应该返回这两个下标值 index1 和 index2，其中 index1 必须小于 index2。
+
+**说明:**
+
+- 返回的下标值（index1 和 index2）不是从零开始的。
+- 你可以假设每个输入只对应唯一的答案，而且你不可以重复使用相同的元素。
+
+**示例**
+
+示例一
+
+```
+输入: numbers = [2, 7, 11, 15], target = 9
+输出: [1,2]
+解释: 2 与 7 之和等于目标数 9 。因此 index1 = 1, index2 = 2 。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 双指针, 指向两端, 不断向中间移动
+    public int[] twoSum(int[] numbers, int target) {
+        int left = 0;
+        int right = numbers.length - 1;
+        while(left < right){
+            int sum = numbers[left] + numbers[right];
+            if(sum == target){
+                int result[] = new int[2];
+                result[0] = left+1;
+                result[1] = right+1;
+                return result;
+            }else if(sum < target){
+                left++;
+            }else{
+                right--;
+            }
+        }
+        return null;
+    }
+}
+```
+
+## 9.[Excel表列名称](https://leetcode-cn.com/problems/excel-sheet-column-title/)
+
+**描述**
+
+给定一个正整数，返回它在 Excel 表中相对应的列名称。
+
+```
+ 1 -> A
+ 2 -> B
+ 3 -> C
+ ...
+ 26 -> Z
+ 27 -> AA
+ 28 -> AB 
+ ...
+```
+
+**示例**
+
+示例一
+
+```
+输入: 1
+输出: "A"
+```
+
+示例二
+
+```
+输入: 28
+输出: "AB"
+```
+
+示例三
+
+```
+输入: 701
+输出: "ZY"
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String convertToTitle(int n) {
+        if(n <= 0){
+            return "";
+        }
+        StringBuilder sb = new StringBuilder();
+        // 转换为26进制, n-- 保证0-25 对应A-Z
+        while(n > 0) {
+            n--;
+            sb.append((char)(n % 26 + 'A'));
+            n /= 26;
+        }
+        return sb.reverse().toString();
+    }
+}
+```
+
