--- a/计算机词汇.md
+++ b/计算机词汇.md
@@ -1,6 +1,6 @@
 # B
 
-binary
+## binary
 
 ```
 binary adj. 二进制的(用0和1记数); 仅基于两个数字的; 二元的; 由两部分组成的; n. 一双;
@@ -9,22 +9,31 @@ binary digit 二进制位；（数）二进制数字；二进制数位;
 binary search 对分查找；二进位检索；折半查找法；二分搜寻;
 ```
 
+# M
+
+## maintainer
+
+```
+n.	维护者；维护设备；软件维护人员; (律 史) 非法帮助诉讼者
+```
+
+# R
+
+## rocket
+
+```
+n. 火箭;火箭武器;火箭(弹);焰火;烟花
+v. 快速增长;猛增;迅速移动;(使)迅速成功，迅速提高地位
+```
+
 # S
 
-scratch
+## scratch
 
 ```
 v.	挠，搔(痒处); 划破，抓破，划伤，抓伤(皮肤); (尤指意外地) 擦破，划损，刮坏;
 n.	(皮肤或物体表面上的) 划痕，划伤; 刮(或擦、抓)的刺耳声; 挠痒; 搔痒;
 adj.	仓促拼凑的; 无让步的; 无让杆的;
 j.  源镜像, docker中所有镜像的祖先父镜像, 类似java中Object类
-```
-
-# M
-
-maintainer
-
-```
-n.	维护者；维护设备；软件维护人员; (律 史) 非法帮助诉讼者
 ```
 
