--- a/面试/算法练习-简单(31-60) .md
+++ b/面试/算法练习-简单(31-60) .md
@@ -557,3 +557,239 @@ class Solution {
 }
 ```
 
+## 10.[多数元素](https://leetcode-cn.com/problems/majority-element/)
+
+**描述**
+
+给定一个大小为 n 的数组，找到其中的多数元素。多数元素是指在数组中出现次数大于 ⌊ n/2 ⌋ 的元素。
+
+你可以假设数组是非空的，并且给定的数组总是存在多数元素。
+
+**示例**
+
+示例一
+
+```
+输入: [3,2,3]
+输出: 3
+```
+
+示例二
+
+```
+输入: [2,2,1,1,1,2,2]
+输出: 2
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 使用排序, 众数总会是最中间的那个
+    public int majorityElement(int[] nums) {
+        Arrays.sort(nums);
+        return nums[nums.length/2];
+    }
+}
+```
+
+## 11.[Excel表列序号](https://leetcode-cn.com/problems/excel-sheet-column-number/)
+
+**描述**
+
+给定一个Excel表格中的列名称，返回其相应的列序号。
+
+例如，
+
+    A -> 1
+    B -> 2
+    C -> 3
+    ...
+    Z -> 26
+    AA -> 27
+    AB -> 28 
+    ...
+
+**示例**
+
+**示例 1:**
+
+```
+输入: "A"
+输出: 1
+```
+
+**示例 2:**
+
+```
+输入: "AB"
+输出: 28
+```
+
+**示例 3:**
+
+```
+输入: "ZY"
+输出: 701
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 26进制转换为10进制
+    public int titleToNumber(String s) {
+        int res = 0;
+        for(int i=0; i<s.length(); i++){
+            int tmp = s.charAt(i) - 64;
+            res = tmp + res * 26;
+        }
+        return res;
+    }
+}
+```
+
+## 13.[阶乘后的零](https://leetcode-cn.com/problems/factorial-trailing-zeroes/)
+
+**描述**
+
+给定一个整数 *n*，返回 *n*! 结果尾数中零的数量。
+
+**示例**
+
+示例 1:
+
+```
+输入: 3
+输出: 0
+解释: 3! = 6, 尾数中没有零。
+```
+
+
+示例 2:
+
+```
+输入: 5
+输出: 1
+解释: 5! = 120, 尾数中有 1 个零.
+```
+
+**说明**: 
+
+你算法的时间复杂度应为 O(log n) 。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int trailingZeroes(int n) {
+        int zeroCount = 0;
+        // 每有一个5, 就会多一个0
+        while(n > 0){
+            n /= 5;
+            zeroCount += n;
+        }
+        return zeroCount;
+    }
+}
+```
+
+## 12.[旋转数组](https://leetcode-cn.com/problems/rotate-array/)
+
+**描述**
+
+给定一个数组，将数组中的元素向右移动 *k* 个位置，其中 *k* 是非负数。
+
+**示例**
+
+示例 1:
+
+```
+输入: [1,2,3,4,5,6,7] 和 k = 3
+输出: [5,6,7,1,2,3,4]
+解释:
+向右旋转 1 步: [7,1,2,3,4,5,6]
+向右旋转 2 步: [6,7,1,2,3,4,5]
+向右旋转 3 步: [5,6,7,1,2,3,4]
+```
+
+示例 2:
+
+```
+输入: [-1,-100,3,99] 和 k = 2
+输出: [3,99,-1,-100]
+解释: 
+向右旋转 1 步: [99,-1,-100,3]
+向右旋转 2 步: [3,99,-1,-100]
+```
+
+**说明**: 
+
+- 尽可能想出更多的解决方案，至少有三种不同的方法可以解决这个问题。
+- 要求使用空间复杂度为 O(1) 的 **原地** 算法。
+
+**题解**
+
+**Java**
+
+```java
+// 环状替换
+class Solution {
+    public void rotate(int[] nums, int k) {
+        int len = nums.length;
+        // 该count, 统计遍历的次数
+        int count = 0;
+        // k 有可能超出数组的长度, 造成无效循环, 所以取余
+        k = k % len; 
+        // nums : [1,2,3,4,5,6]   k : 2
+        // 1->3 3->5 5->1 这样替换最终又会回到起点, 所以下方让cur=start, 当cur==start时, 结束do-while循环
+        // start进行加一
+        for(int start=0; count<len; start++){
+            int cur = start;
+            int current = nums[start];
+            do{
+                // 算出, 要被替换的点的位置
+                int next = (cur+k) % len;
+                // 取出, 被替换的数
+                int tmp = nums[next];
+                // 替换
+                nums[next] = current;
+                current = tmp;
+                cur = next;
+                count++;
+            }while(cur != start);
+        }
+    }
+}
+// 翻转
+class Solution {
+    public void rotate(int[] nums, int k) {
+        // nums = [1,2,3,4,5,6], k = 2
+        k = k % nums.length;
+        // 第一次翻转, 将数组全部翻转
+        // nums = [6,5,4,3,2,1]
+        reverse(nums, 0, nums.length-1);
+        // 第二次, 将0-k翻转
+        // nums = [5,6,4,3,2,1]
+        reverse(nums, 0, k-1);
+        // 第三次, 将后面的翻转
+        // nums = [5,6,1,2,3,4]
+        reverse(nums, k, nums.length-1); 
+    }
+    public void reverse(int[] nums, int start, int end) {
+        while(start < end){
+            int tmp = nums[start];
+            nums[start] = nums[end];
+            nums[end] = tmp;
+            start++;
+            end--;
+        }
+    }
+}
+```
