--- a/后端/工具类.md
+++ b/后端/工具类.md
@@ -100,3 +100,28 @@ public class IDWorker {
 }
 ```
 
+# 下载器
+
+由于下载指定文件， 需要导入commons-io-2.7.jar
+
+```java
+import org.apache.commons.io.FileUtils;
+
+class WebDownloader{
+    /**
+     * 文件下载器
+     * @param url 下载地址
+     * @param name 文件名 
+     * @return void 
+     */ 
+    public void downloader(String url, String name){
+        try {
+            FileUtils.copyURLToFile(new URL(url), new File(name));
+        } catch (IOException e) {
+            e.printStackTrace();
+            System.out.println("io异常");
+        }
+    }
+}
+```
+
