--- a/面试/SQL练习-简单(1-30).md
+++ b/面试/SQL练习-简单(1-30).md
@@ -46,9 +46,14 @@ FirstName, LastName, City, State
 **mysql**
 
 ```mssql
-select FirstName, LastName, City, State 
-from Person p 
-left join Address a on p.PersonId = a.PersonId
+SELECT
+	FirstName,
+	LastName,
+	City,
+	State 
+FROM
+	Person p
+	LEFT JOIN Address a ON p.PersonId = a.PersonId
 ```
 
 ## 2.[第二高的薪水](https://leetcode-cn.com/problems/second-highest-salary/)
@@ -82,12 +87,8 @@ left join Address a on p.PersonId = a.PersonId
 **mysql**
 
 ```mssql
-select 
-IFNULL((select Salary 
-         from Employee 
-         group by Salary 
-         order by Salary desc 
-         limit 1,1), null) SecondHighestSalary
+SELECT IFNULL(
+( SELECT Salary FROM Employee GROUP BY Salary ORDER BY Salary DESC LIMIT 1, 1 ),NULL) SecondHighestSalary
 ```
 
 ## 3.[超过经理收入的员工](https://leetcode-cn.com/problems/employees-earning-more-than-their-managers/)
@@ -122,10 +123,14 @@ IFNULL((select Salary
 **mysql**
 
 ```mssql
-select e.Name as Employee 
-from Employee e , Employee m 
-where e.ManagerId = m.Id 
-    and e.Salary > m.Salary
+SELECT
+	e.NAME AS Employee 
+FROM
+	Employee e,
+	Employee m 
+WHERE
+	e.ManagerId = m.Id 
+	AND e.Salary > m.Salary
 ```
 
 ## 4.[查找重复的电子邮箱](https://leetcode-cn.com/problems/duplicate-emails/)
@@ -161,10 +166,14 @@ where e.ManagerId = m.Id
 **mysql**
 
 ```mssql
-select Email 
-from Person 
-group by Email
-having count(Email) > 1
+SELECT
+	Email 
+FROM
+	Person 
+GROUP BY
+	Email 
+HAVING
+	count( Email ) > 1
 ```
 
 ## 5.[从不订购的客户](https://leetcode-cn.com/problems/customers-who-never-order/)
@@ -215,10 +224,105 @@ having count(Email) > 1
 **mysql**
 
 ```mssql
-select name as Customers
-from Customers 
-where Id not in
-    (select CustomerId from Orders)
+SELECT name AS
+	Customers 
+FROM
+	Customers 
+WHERE
+	Id NOT IN (
+			SELECT
+				CustomerId 
+			FROM
+				Orders)
 ```
 
-## 
+## 6.[删除重复的电子邮箱](https://leetcode-cn.com/problems/delete-duplicate-emails/)
+
+**描述**
+
+编写一个 SQL 查询，来删除 `Person` 表中所有重复的电子邮箱，重复的邮箱里只保留 **Id** *最小* 的那个。
+
+```
++----+------------------+
+| Id | Email            |
++----+------------------+
+| 1  | john@example.com |
+| 2  | bob@example.com  |
+| 3  | john@example.com |
++----+------------------+
+Id 是这个表的主键。
+```
+
+`例如，在运行你的查询语句之后，上面的 `Person` 表应返回以下几行:
+
+```
++----+------------------+
+| Id | Email            |
++----+------------------+
+| 1  | john@example.com |
+| 2  | bob@example.com  |
++----+------------------+
+```
+
+**提示：**
+
+- 执行 SQL 之后，输出是整个 `Person` 表。
+- 使用 `delete` 语句。
+
+**题解**
+
+**mysql**
+
+```mssql
+DELETE p1 
+FROM
+	Person p1,
+	Person p2 
+WHERE
+	p1.Email = p2.Email 
+	AND p1.Id > p2.Id
+```
+
+## 7.[上升的温度](https://leetcode-cn.com/problems/rising-temperature/)
+
+**描述**
+
+给定一个 `Weather` 表，编写一个 SQL 查询，来查找与之前（昨天的）日期相比温度更高的所有日期的 Id。
+
+```
++---------+------------------+------------------+
+| Id(INT) | RecordDate(DATE) | Temperature(INT) |
++---------+------------------+------------------+
+|       1 |       2015-01-01 |               10 |
+|       2 |       2015-01-02 |               25 |
+|       3 |       2015-01-03 |               20 |
+|       4 |       2015-01-04 |               30 |
++---------+------------------+------------------+
+```
+
+`例如，根据上述给定的 `Weather` 表格，返回如下 Id:
+
+```
++----+
+| Id |
++----+
+|  2 |
+|  4 |
++----+
+```
+
+**题解**
+
+**mysql**
+
+```mssql
+SELECT
+	w1.Id 
+FROM
+	Weather w1,
+	Weather w2 
+WHERE
+	DateDiff( w1.RecordDate, w2.RecordDate ) = 1 
+	AND w1.Temperature > w2.Temperature
+```
+
