--- a/面试/算法练习-简单(31-60) .md
+++ b/面试/算法练习-简单(31-60) .md
@@ -653,7 +653,7 @@ class Solution {
 }
 ```
 
-## 13.[阶乘后的零](https://leetcode-cn.com/problems/factorial-trailing-zeroes/)
+## 12.[阶乘后的零](https://leetcode-cn.com/problems/factorial-trailing-zeroes/)
 
 **描述**
 
@@ -700,7 +700,7 @@ class Solution {
 }
 ```
 
-## 12.[旋转数组](https://leetcode-cn.com/problems/rotate-array/)
+## 13.[旋转数组](https://leetcode-cn.com/problems/rotate-array/)
 
 **描述**
 
@@ -793,3 +793,125 @@ class Solution {
     }
 }
 ```
+
+## 14.[打家劫舍](https://leetcode-cn.com/problems/house-robber/)
+
+**描述**
+
+你是一个专业的小偷，计划偷窃沿街的房屋。每间房内都藏有一定的现金，影响你偷窃的唯一制约因素就是相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警。
+
+给定一个代表每个房屋存放金额的非负整数数组，计算你 不触动警报装置的情况下 ，一夜之内能够偷窃到的最高金额。
+
+**示例**
+
+示例 1:
+
+```
+输入：[1,2,3,1]
+输出：4
+解释：偷窃 1 号房屋 (金额 = 1) ，然后偷窃 3 号房屋 (金额 = 3)。
+     偷窃到的最高金额 = 1 + 3 = 4 。
+```
+
+示例 2:
+
+```
+输入：[2,7,9,3,1]
+输出：12
+解释：偷窃 1 号房屋 (金额 = 2), 偷窃 3 号房屋 (金额 = 9)，接着偷窃 5 号房屋 (金额 = 1)。
+     偷窃到的最高金额 = 2 + 9 + 1 = 12 。
+```
+
+**说明**: 
+
+- `0 <= nums.length <= 100`
+- `0 <= nums[i] <= 400`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    /*
+    *  动态规划
+    *  因为不能连续偷两家的钱, 所以偷n家的钱,最优解就是就是Max(nums[n-2] + nums[n], nums[n-1])中的最大值
+    *  例子: n = 1 时, 最大值是nums[1]
+    *       n = 2 时, 最大值是 max(nums[1], nums[2])
+    *       n = 3 时, 最大值是 max(nums[3] + nums[3-2], nums[3-1])
+    *       n = 4 时, 最大值是 max(nums[4] + nums[4-2], nums[4-1])
+    *  每一次遍历, 都取之前的最优解,加上新值做比较
+    */
+    public int rob(int[] nums) {
+        if(nums == null || nums.length == 0){
+            return 0;
+        }
+        if(nums.length == 1){
+            return nums[0];
+        }
+        if(nums.length == 2){
+            return Math.max(nums[0], nums[1]);
+        }
+        // first和seonde保存最近的两次最优解
+        int first = nums[0];
+        int second = Math.max(nums[0], nums[1]);
+        for(int i=2; i<nums.length;i++){
+            int tmp = second;
+            second = Math.max(nums[i] + first, second);
+            first = tmp;
+        }
+        return second;
+    }
+}
+```
+
+## 15.[快乐数](https://leetcode-cn.com/problems/happy-number/)
+
+**描述**
+
+编写一个算法来判断一个数 n 是不是快乐数。
+
+「快乐数」定义为：对于一个正整数，每一次将该数替换为它每个位置上的数字的平方和，然后重复这个过程直到这个数变为 1，也可能是 无限循环 但始终变不到 1。如果 可以变为  1，那么这个数就是快乐数。
+
+如果 n 是快乐数就返回 True ；不是，则返回 False 。
+
+**示例**
+
+```
+输入：19
+输出：true
+解释：
+12 + 92 = 82
+82 + 22 = 68
+62 + 82 = 100
+12 + 02 + 02 = 1
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean isHappy(int n) {
+        Set<Integer> set = new HashSet<>();
+        while(n != 1){
+            // 判断该数字是否已遍历过, 已遍历过, 说明会无限循环, return false
+            if(set.contains(n)){
+                return false;
+            }
+            set.add(n);
+            int tmp = n;
+            n = 0;
+            // 将数字每一位平方相加
+            while(tmp != 0){
+                int d = tmp % 10;
+                n += d * d;
+                tmp /= 10;
+            }   
+        }
+        return true;
+    }
+}
+```
+
