--- a/后端/设计模式.md
+++ b/后端/设计模式.md
@@ -2,22 +2,20 @@
 
 ## 工厂模式
 
+### 接口
+
 ```java
-public class 工厂模式 {
-    public static void main(String[] args) {
-        PhoneFactory.createPhone("华为").brand();
-        PhoneFactory.createPhone("苹果").brand();
-
-    }
-}
-
 // 接口
 interface Phone{
     void brand();
 }
+```
+
+### 接口实现类
+
+```java
 // 接口不同的实现类
 class Huawei implements Phone{
-
     @Override
     public void brand() {
         System.out.println("one huawei");
@@ -29,6 +27,11 @@ class Iphone implements Phone{
         System.out.println("one iphone");
     }
 }
+```
+
+### 工厂
+
+```java
 // 工厂通过不同的参数, 创建不同的实现类
 class PhoneFactory{
     public static Phone createPhone(String name){
@@ -41,6 +44,167 @@ class PhoneFactory{
     }
 }
 ```
+
+### 测试
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        PhoneFactory.createPhone("华为").brand();
+        PhoneFactory.createPhone("苹果").brand();
+    }
+}
+```
+
+## 抽线工厂模式
+
+### 接口
+
+```java
+interface Computer{
+    String internet();
+}
+interface Phone{
+    String call();
+}
+```
+
+### 实现类
+
+```java
+class PhoneApple implements Phone{
+    @Override
+    public String call() {
+        return "iphone手机";
+    }
+}
+
+class PhoneHuaWei implements Phone{
+    @Override
+    public String call() {
+        return "huawei手机";
+    }
+}
+```
+
+```java
+class ComputerApple implements Computer{
+    @Override
+    public String internet() {
+        return "iphone电脑";
+    }
+}
+
+class ComputerHuaWei implements Computer{
+    @Override
+    public String internet() {
+        return "huawei电脑";
+    }
+}
+```
+
+### 抽象工厂
+
+```java
+public abstract class AbstractFactory {
+    public abstract Phone createPhone(String brand);
+    public abstract Computer createComputer(String brand);
+}
+```
+
+### 实现工厂
+
+```java
+class PhoneFactory extends AbstractFactory{
+    @Override
+    public Phone createPhone(String brand) {
+        if(brand.equals("华为")){
+            return new PhoneHuaWei();
+        }else if(brand.equals("苹果")){
+            return new PhoneApple();
+        }
+        return null;
+    }
+    @Override
+    public Computer createComputer(String brand) {
+        return null;
+    }
+}
+```
+
+```java
+class ComputerFactory extends AbstractFactory{
+    @Override
+    public Phone createPhone(String brand) {
+        return null;
+    }
+    @Override
+    public Computer createComputer(String brand) {
+        if(brand.equals("华为")){
+            return new ComputerHuaWei();
+        }else if(brand.equals("苹果")){
+            return new ComputerApple();
+        }
+        return null;
+    }
+}
+```
+
+### 测试
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        AbstractFactory phoneFactory = new PhoneFactory();
+        Phone phoneHuawei = phoneFactory.createPhone("华为");
+        Phone phoneApple = phoneFactory.createPhone("苹果");
+        System.out.println(phoneHuawei.call());
+        System.out.println(phoneApple.call());
+        AbstractFactory computerFactory = new ComputerFactory();
+        Computer computerHuawei = computerFactory.createComputer("华为");
+        Computer computerApple = computerFactory.createComputer("苹果");
+        System.out.println(computerHuawei.internet());
+        System.out.println(computerApple.internet());
+    }
+}
+```
+
+## 单例模式
+
+### 懒汉式(线程安全)
+
+懒汉式的意思是, 懒表示懒加载, 是指在使用的时候才开始实例化
+
+因为加了synchronized同步锁, 所以是线程安全的
+
+```java
+public class LazySingleton {
+    private static LazySingleton instance;
+    public static synchronized LazySingleton getInstance() {
+        if (instance != null){
+            instance = new LazySingleton();
+        }
+        return instance;
+    }
+}
+```
+
+#### 饿汉式(线程安全)
+
+饿汉式的意思是, 表示不等待系统去调用, 在class被加载时就实例化对象
+
+因为是静态对象, 该对象不会被修改, 所以是线程安全的.
+
+```java
+public class HungrySingleton {
+    private static HungrySingleton instance = new HungrySingleton();
+    public static HungrySingleton getInstance() {
+        return instance;
+    }
+}
+```
+
+
 
 # 结构型模式
 
