--- a/面试/算法练习-简单(31-60) .md
+++ b/面试/算法练习-简单(31-60) .md
@@ -915,3 +915,217 @@ class Solution {
 }
 ```
 
+## 16.[移除链表元素](https://leetcode-cn.com/problems/remove-linked-list-elements/)
+
+**描述**
+
+删除链表中等于给定值 **val** 的所有节点。
+
+**示例**
+
+```
+输入: 1->2->6->3->4->5->6, val = 6
+输出: 1->2->3->4->5
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    // 哨兵模式
+    public ListNode removeElements(ListNode head, int val) {
+        // 定义一个前置节点
+        ListNode sentinel = new ListNode(0);
+        sentinel.next = head;
+        // tmp指向前置节点
+        ListNode tmp = node;
+        while(head != null){
+            // 当头节点的值为要删除的值, 让前置节点的下一个值, 为头节点的下一个值, 头节点指向下一个节点
+            // 当头节点的值不为要删除的值, 前置节点指向头节点, 头节点指向下一个节点
+            if(head.val == val){
+                tmp.next = head.next;
+            }else{
+                tmp = head;
+            }
+            head = head.next;
+        }
+        return sentinel.next;
+    }
+}
+```
+
+## 17.[计数质数](https://leetcode-cn.com/problems/count-primes/)
+
+**描述**
+
+统计所有小于非负整数 *n* 的质数的数量。
+
+**示例**
+
+```
+输入: 10
+输出: 4
+解释: 小于 10 的质数一共有 4 个, 它们是 2, 3, 5, 7 。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    /* 
+    * 排除法
+    * 1. 排除掉大于2的偶数
+    * 2. 从3开始, 排除掉3的奇数倍, 5的奇数倍, 6的奇数倍
+    * 3. 这些数都排除后, 剩下的数量就是质数的数量
+    */
+    public int countPrimes(int n) {
+        if(n <= 2){
+            return 0;
+        }
+        int count = n / 2;
+        boolean[] isPrimes = new boolean[n]; 
+        // i*i<n 表示遍历sqrt(n)次就可全部排除
+        // i=i+2 表示每次遍历奇数
+        for(int i=3; i*i<n; i=i+2){
+            if(isPrimes[i]){
+                continue;
+            }
+            // j=j+i*2 表示每次遍历奇数的奇数倍
+            for(int j=i*i; j<n; j=j+i*2){
+                if(!isPrimes[j]){
+                    count--;
+                    isPrimes[j] = true;
+                }
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 18.[同构字符串](https://leetcode-cn.com/problems/isomorphic-strings/)
+
+**描述**
+
+给定两个字符串 s 和 t，判断它们是否是同构的。
+
+如果 s 中的字符可以被替换得到 t ，那么这两个字符串是同构的。
+
+所有出现的字符都必须用另一个字符替换，同时保留字符的顺序。两个字符不能映射到同一个字符上，但字符可以映射自己本身。
+
+**示例**
+
+**示例 1:**
+
+```
+输入: s = "egg", t = "add"
+输出: true
+```
+
+**示例 2:**
+
+```
+输入: s = "foo", t = "bar"
+输出: false
+```
+
+**示例 3:**
+
+```
+输入: s = "paper", t = "title"
+输出: true
+```
+
+**说明:**
+
+你可以假设 ***s*** 和 **t** 具有相同的长度。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean isIsomorphic(String s, String t) {
+        return isSame(s, t) && isSame(t, s);
+    }
+	/*
+	*  将映射存到map中, 每次遍历字符, 去查有没有已经存在的映射关系, 如果有, 这个映射的值是否与当前值相等
+	*  如果没有映射, 新建映射关系
+	*/
+    public boolean isSame(String s, String t){
+        Map<Character, Character> map = new HashMap<>();
+        for(int i=0; i<s.length(); i++){
+            if(map.containsKey(s.charAt(i))){
+                if(map.get(s.charAt(i)) != t.charAt(i)){
+                    return false;
+                }
+            }else{
+                map.put(s.charAt(i), t.charAt(i));
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 19.[反转链表](https://leetcode-cn.com/problems/reverse-linked-list/)
+
+**描述**
+
+反转一个单链表。
+
+**示例**
+
+```
+输入: 1->2->3->4->5->NULL
+输出: 5->4->3->2->1->NULL
+```
+
+**进阶:**
+
+你可以迭代或递归地反转链表。你能否用两种方法解决这道题？
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 循环
+    public ListNode reverseList(ListNode head) {
+        ListNode pre = null;
+        while(head != null){
+            ListNode node = head.next;
+            head.next = pre;
+            pre = head;
+            head = node;
+        }
+        return pre;
+    }
+	// 递归
+    public ListNode reverseList2(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+        ListNode p = reverseList(head.next);
+        // 让相邻两个节点, 翻转
+        head.next.next = head;
+        head.next = null;
+        return p;
+    }
+}
+```
+
