--- a/面试/算法练习-简单(31-60) .md
+++ b/面试/算法练习-简单(31-60) .md
@@ -2,6 +2,10 @@
 
 [力扣（LeetCode）](https://leetcode-cn.com/)
 
+[TOC]
+
+
+
 # 简单(30-31)
 
 ## 1.[买卖股票的最佳时机](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/)
@@ -1125,6 +1129,107 @@ class Solution {
         head.next.next = head;
         head.next = null;
         return p;
+    }
+}
+```
+
+## 20.[存在重复元素](https://leetcode-cn.com/problems/contains-duplicate/)
+
+**描述**
+
+给定一个整数数组，判断是否存在重复元素。
+
+如果任意一值在数组中出现至少两次，函数返回 `true` 。如果数组中每个元素都不相同，则返回 `false` 。
+
+**示例**
+
+**示例 1:**
+
+```
+输入: [1,2,3,1]
+输出: true
+```
+
+**示例 2:**
+
+```
+输入: [1,2,3,4]
+输出: false
+```
+
+**示例 3:**
+
+```
+输入: [1,1,1,3,3,4,3,2,4,2]
+输出: true
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 先排序, 然后比较前后两个值
+    public boolean containsDuplicate(int[] nums) {
+        Arrays.sort(nums);
+        for (int i = 0; i < nums.length - 1; ++i) {
+            if (nums[i] == nums[i + 1]) return true;
+        }
+        return false;
+    }
+}
+```
+
+## 21.[存在重复元素 II](https://leetcode-cn.com/problems/contains-duplicate-ii/)
+
+**描述**
+
+给定一个整数数组和一个整数 k，判断数组中是否存在两个不同的索引 i 和 j，使得 nums [i] = nums [j]，并且 i 和 j 的差的 绝对值 至多为 k。
+
+**示例**
+
+**示例 1:**
+
+```
+输入: nums = [1,2,3,1], k = 3
+输出: true
+```
+
+**示例 2:**
+
+```
+输入: nums = [1,0,1,1], k = 1
+输出: true
+```
+
+**示例 3:**
+
+```
+输入: nums = [1,2,3,1,2,3], k = 2
+输出: false
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 将值和索引存储到map中,  判断相同得, 取出索引比较差值
+    public boolean containsNearbyDuplicate(int[] nums, int k) {
+        Map<Integer, Integer> map = new HashMap<>();
+        int i=0;
+        for(int num: nums){
+            if(map.containsKey(num)){
+                if(Math.abs(map.get(num) - i) <= k){
+                    return true;
+                }
+            }
+            map.put(num, i);     
+            i++;
+        }
+        return false;
     }
 }
 ```
