--- a/后端/设计模式.md
+++ b/后端/设计模式.md
@@ -56,7 +56,7 @@ public class Main {
 }
 ```
 
-## 抽线工厂模式
+## 抽象工厂模式
 
 ### 接口
 
@@ -255,7 +255,127 @@ public class Lock2Singleton {
 }
 ```
 
+## 建造者模式
 
+### 实体类
+
+```java
+public class Computer {
+
+    private String cpu;
+    private String memary;
+    private String disk;
+
+    public String getCpu() {
+        return cpu;
+    }
+
+    public void setCpu(String cpu) {
+        this.cpu = cpu;
+    }
+
+    public String getMemary() {
+        return memary;
+    }
+
+    public void setMemary(String memary) {
+        this.memary = memary;
+    }
+
+    public String getDisk() {
+        return disk;
+    }
+
+    public void setDisk(String disk) {
+        this.disk = disk;
+    }
+
+    @Override
+    public String toString() {
+        return "Computer{" +
+                "cpu='" + cpu + '\'' +
+                ", memary='" + memary + '\'' +
+                ", disk='" + disk + '\'' +
+                '}';
+    }
+}
+```
+
+### 抽象接口
+
+```java
+public interface ComputerBuilder {
+    void buildCpu();
+    void buildMemory();
+    void buildDisk();
+    Computer buildComputer();
+}
+```
+
+### 实现类
+
+```java
+public class ComputerConcreteBuilder implements ComputerBuilder {
+
+    private Computer computer;
+
+    public ComputerConcreteBuilder(){
+        computer = new Computer();
+    }
+
+    @Override
+    public void buildCpu() {
+        System.out.println("构建cpu");
+        computer.setCpu("36核");
+    }
+
+    @Override
+    public void buildMemory() {
+        System.out.println("构建内存");
+        computer.setMemary("32G");
+    }
+
+    @Override
+    public void buildDisk() {
+        System.out.println("构建硬盘");
+        computer.setDisk("10T");
+    }
+
+    @Override
+    public Computer buildComputer() {
+        return computer;
+    }
+}
+```
+
+### 构建使用builder接口得对象
+
+```java
+public class ComputerDirector {
+    public Computer constructComputer(ComputerBuilder computerBuilder){
+        computerBuilder.buildCpu();
+        computerBuilder.buildMemory();
+        computerBuilder.buildDisk();
+        return computerBuilder.buildComputer();
+    }
+}
+```
+
+### 主类
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        // 构建使用builder接口得对象
+        ComputerDirector computerDirector = new ComputerDirector();
+        // 创建建造者对象
+        ComputerBuilder computerBuilder = new ComputerConcreteBuilder();
+        // 建造产品
+        Computer computer = computerDirector.constructComputer(computerBuilder);
+        System.out.println(computer.toString());
+    }
+}
+```
 
 # 结构型模式
 
