笔记 Signed-off-by: itianeru <1438687182@qq.com>

--- a/后端/工具类.md
+++ b/后端/工具类.md
@@ -125,3 +125,216 @@ class WebDownloader{
 }
 ```
 
+# Excel
+
+## POI
+
+### 基本功能
+
+- **HSSF**  03版excel  最多65536条
+- **XSSF**  07版之后的excel
+- **HWPF**  word
+- **HSLF**   ppt
+- **HDGF**  visio
+
+### 添加依赖
+
+```xml
+<!-- excel 03 -->
+<dependeny>
+	<groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.9</version>
+</dependeny>
+<!-- excel 07 -->
+<dependeny>
+	<groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.9</version>
+</dependeny>
+<!-- 日期格式化 -->
+<dependeny>
+	<groupId>joda-time</groupId>
+    <artifactId>joda-time</artifactId>
+    <version>2.10.1</version>
+</dependeny>
+```
+
+### 使用
+
+#### 写入
+
+```java
+public void method(){
+    // 创建工作簿  03
+    Workbook workbook = new HSSFWorkbook();
+    // 07
+    // Workbook workbook = new XSSFWorkbook();
+    // 创建工作表
+    Sheet sheet = workbook.createSheet("sheet页名字");
+    // 创建行
+    Row row1 = sheet.createRow(0);
+	// 创建格子
+    Cell cell = row1.createCell(0);
+    cell.setCellValue("数据");
+    // 03是xls  07是xlsx
+    FileOutputStream stream = new FileOutputStream("文件名.xls");
+    workbook.write(stream);
+    stream.close();
+}
+```
+
+大数据量写入
+
+03版是先存到内存中, 再一次写入速度快
+
+07版是一行一行写入, 速度慢但是没有行数限制
+
+```java
+public void method(){
+	 // 创建工作簿  03
+    Workbook workbook = new HSSFWorkbook();
+    // 07
+    // Workbook workbook = new XSSFWorkbook();
+    // 创建工作表
+    Sheet sheet = workbook.createSheet("sheet页名字");
+    // 创建行
+    for(int rowNum=0; rowNum < 65536; rowNum++){
+        Row row = sheet.createRow(rowNum);
+        for(int cellNum=0; cellNum<10; cellNum++){
+            // 创建格子
+            Cell cell = row.createCell(cellNum);
+            cell.setCellValue("数据"+cellNum);
+        }
+    }
+    // 03是xls  07是xlsx
+    FileOutputStream stream = new FileOutputStream("文件名.xls");
+    workbook.write(stream);
+    stream.close();
+}
+```
+
+使用临时表加速07版
+
+```java
+// 指定临时表大小
+Workbook workbook = new SXSSFWorkbook(100);
+// 最后需要清除临时表
+((SXSSFWorkbook) workbook).dispose()
+```
+
+#### 读取
+
+```java
+public void method(){
+    // 读取
+    FileInputStream stream = new FileInputStream("文件名.xls");
+	// 读取到工作簿
+    Workbook workbook = new HSSFWorkbook(stream);
+    // 获取sheet页
+    Sheet sheet = workbook.getSheetAt(0);
+    // 获取行
+    Row row = sheet.getRow(0);
+    // 获取单元格
+    Cell cell = row.createCell(0);
+    // 获取数据
+    cell.getStringCellValue();
+    stream.close();
+}
+```
+
+##### 获取所有行
+
+```java
+sheet.getPhysicalNumberOfRows();
+```
+
+##### 读取一行单元格数量
+
+```java
+row.getPhysicalNumberOfCells();
+```
+
+##### 获取单元格类型
+
+```java
+int type = cell.getCellType()
+switch(type) {
+    case HSSFCell.CELL_TYPE_STRING:   // 字符串
+        
+    case HSSFCell.CELL_TYPE_BOOLEAN:   // 布尔类型
+    
+    case HSSFCell.CELL_BLANK:   // 空
+        
+    case HSSFCell.CELL_TYPE_NUMERIC:   // 数字或者日期
+    ... 略
+}
+```
+
+##### 判断单元格是否是日期类型
+
+```java
+HSSFDateUtil.isCellDateFormatted(cell);
+```
+
+##### 设置单元格格式
+
+```java
+cell.setCellType(HSSFCell.CELL_TYPE_STRING)
+```
+
+#### 计算公式
+
+略
+
+## easyExcel
+
+### 添加依赖
+
+```xml
+<dependeny>
+	<groupId>com.alibaba</groupId>
+    <artifactId>easyexcel</artifactId>
+    <version>2.2.0-beta2</version>
+</dependeny>
+```
+
+### 使用
+
+#### 实体类
+
+```java
+public class User{
+    @ExcelProperty("标题名")
+    private String name;
+    @ExcelProperty("标题名")
+    private int age;
+    // 忽略这个字段
+    @ExcelIgnore
+    private String ignore
+}
+```
+
+#### 写入
+
+```java
+public void method(){
+    List<User> list = new ArrayList<>();
+    User user = new User();
+    user.setName("老王");
+    user.setAge(27);
+    list.add(user);
+    // 写入
+    EasyExcel.write("文件名.xlsx", User.class).sheet("sheet页名").doWrite(list);
+}
+```
+
+#### 读取
+
+```java
+public void method(){
+    // 读取 需要指定监听器
+    EasyExcel.read("文件名.xlsx", User.class, new DemoDataListener()).sheet().doRead();
+}
+```
+
