--- a/后端/工具类.md
+++ b/后端/工具类.md
@@ -100,6 +100,39 @@ public class IDWorker {
 }
 ```
 
+# Lombok
+
+## 安装
+
+在idea中安装Lombok
+
+## 依赖
+
+```xml
+<dependeny>
+	<groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.10</version>
+    <scope>provided</scope>
+</dependeny>
+```
+
+## 使用
+
+使用在实体类上,
+
+### @Data
+
+生成get set, equals, hashCode, toString等方法
+
+### @AllArgsConstructor
+
+生成有参构造
+
+### @NoArgsConstructor
+
+无参构造
+
 # 下载器
 
 由于下载指定文件， 需要导入commons-io-2.7.jar
